# ARKO-21L

./: README.md
MIPS/: Krawczyk_Bartlomiej_mips.asm  README.md
x86/: CMakeLists.txt  README.md  main.c  scale.asm
x86_64/: CMakeLists.txt  Makefile  README.md  main.c  scale.asm  x86_64
